--- a/Pages/Users.cshtml
+++ b/Pages/Users.cshtml
@@ -4,9 +4,20 @@
     ViewData["Title"] = "Users";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Users</h1>
-    <a class="btn btn-primary btn-sm" href="/Create">New User</a>
+<h1 class="text-center display-4">Users</h1>
+<!--
+<div class="text-left">
+   <a class="btn btn-primary btn-sm" href="/Create">New User</a>
+</div>
+-->
+<div class="container">
+    <div class="row">
+        <div class="col"></div> <!-- This empty column pushes the button to the right -->
+        <div class="col-auto">
+            <button class="btn btn-primary" href="/Create">New User</button>
+        </div>
+    </div>
+</div>
     <table class="table">
         <thead>
             <tr>
@@ -15,7 +26,7 @@
                 <th>Password</th>
                 <th>User Type</th>
                 <th>User Photo</th>
-                <th>Register Date</th>
+                <th>Created At</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -28,7 +39,7 @@
                     <td>@item.password</td>
                     <td>@item.userType</td>
                     <td>@item.userPhoto</td>
-                    <td>@item.registerDate</td>
+                    <td>@item.createdAt</td>
                     <td>
                         <a class="btn btn-primary btn-sm" href="/Users/Edit?id=">Edit</a>
                         <a class="btn btn-danger btn-sm" href="/Users/Delete?id=">Delete</a>
@@ -37,4 +48,4 @@
             }
         </tbody>
     </table>
-</div>
+
