--- a/Pages/Users.cshtml
+++ b/Pages/Users.cshtml
@@ -15,7 +15,7 @@
                 <th>Password</th>
                 <th>User Type</th>
                 <th>User Photo</th>
-                <th>Register Date</th>
+                <th>Created At</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -28,7 +28,7 @@
                     <td>@item.password</td>
                     <td>@item.userType</td>
                     <td>@item.userPhoto</td>
-                    <td>@item.registerDate</td>
+                    <td>@item.createdAt</td>
                     <td>
                         <a class="btn btn-primary btn-sm" href="/Users/Edit?id=">Edit</a>
                         <a class="btn btn-danger btn-sm" href="/Users/Delete?id=">Delete</a>
