--- a/Pages/Login/Login.cshtml
+++ b/Pages/Login/Login.cshtml
@@ -3,47 +3,78 @@
 @{
 }
 
-<div class="container border" style="padding:20px">
+
+<style>
+	.custom-button {
+		background-color: #3F8F8B; 
+		color: white; 
+	}
+
+
+
+</style>
+
+<div class="container rounded border" style="padding:20px" >
 	<form method="post">
 		@* for validation *@
 		<div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
-		@* UserName *@
-		<div class="form-group row">
-			<div class="col-2">
-				<label asp-for="Credential.UserName"></label>
+	
+		<div style="text-align:right">
+
+			@* UserName *@
+			<div class="form-group row">
+				<div class="col-5">
+					<label asp-for="Credential.UserName"></label>
+				</div>
+			
+				<div style="padding-bottom:10px"></div>
+
+				<div class="col-7" >
+					<div style="padding-left:430px">
+						<input type="text" asp-for="Credential.UserName" class="form-control"/>
+					</div>
+				</div>
+				<span class="text-danger" asp-validation-for="Credential.UserName"></span>
 			</div>
-			<div class="col-5">
-				<input type="text" asp-for="Credential.UserName" class="form-control"/>
+		
+
+			@* Padding *@
+			<div style="padding-top:15px"></div>
+
+			@* Password *@
+			<div class="form-group row">
+				<div class="col-5">
+					<label asp-for="Credential.Password"></label>
+				</div>
+
+				<div style="padding-bottom:10px"></div>
+
+				<div class="col-7">
+					<div style="padding-left:430px">
+						<input type="password" asp-for="Credential.Password" class="form-control"/>
+					</div>
+				</div>
+				<span class="text-danger" asp-validation-for="Credential.Password"></span>
 			</div>
-			<span class="text-danger" asp-validation-for="Credential.UserName"></span>
+		
+
+			@* Padding *@
+			<div style="padding-top:30px"></div>
+
+			@* Submit button *@
+			<div class="form-group row">
+				<div class="col-7">
+					<div style="padding-left:140px">
+					<input type="submit" class="btn custom-button col-md-6" value="Login" />
+					</div>
+				</div>
+
+				<div class="col-5">
+				</div>
+			</div>
+
 		</div>
 
-		@* Padding *@
-		<div style="padding:10px"></div>
-
-		@* Password *@
-		<div class="form-group row">
-			<div class="col-2">
-				<label asp-for="Credential.Password"></label>
-			</div>
-			<div class="col-5">
-				<input type="password" asp-for="Credential.Password" class="form-control"/>
-			</div>
-			<span class="text-danger" asp-validation-for="Credential.Password"></span>
-		</div>
-
-		@* Padding *@
-		<div style="padding:10px"></div>
-
-		@* Submit button *@
-		<div class="form-group row">
-			<div class="col-2">
-				<input type="submit" class="btn btn-primary" value="Login" />
-			</div>
-			<div class="col-5">
-				
-			</div>
-		</div>
 	</form>
 </div>
