--- a/Pages/Users/Create.cshtml
+++ b/Pages/Users/Create.cshtml
@@ -42,7 +42,7 @@
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</div>
 		<div class="col-sm-3 d-grid">
-			<a class="btn btn-outline-primary" href="/Users/UsersIndex" role="button">Cancel</a>
+			<a class="btn btn-outline-primary" href="/Users/Index" role="button">Cancel</a>
 		</div>
 	</div>
 </form>
