--- a/Pages/DisasterPage/Disaster.cshtml
+++ b/Pages/DisasterPage/Disaster.cshtml
@@ -4,7 +4,15 @@
 }
 
 <div class="container p-3">
+
 	<div class="row pt-4">
+		<form class="d-flex">
+			<input class="form-control me-sm-2" type="search" placeholder="Search">
+			<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+		</form>
+	</div>
+
+	<div class="row pt-5">
 		<div class="col-6">
 			<h2 class="text-primary">Disaster</h2>
 		</div>
