--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -18,7 +18,7 @@
 		</div>
 
 		<div class="col-6 text-end">
-			<a asp-page="create" class="btn btn-primary">Add Disaster</a>
+			<a asp-page="create" class="btn btn-primary"><i class="bi bi-plus-circle"></i>Add Disaster</a>
 		</div>
 	</div>
 
@@ -49,10 +49,10 @@
 			<tr>
 				<td width="20%">Gaya-gaya</td>
 				<td width="10%">Fire</td>
-				<td width="30%">Started on LPG explosion. Engulfing several high-rise buildings and residential areas.</td>
+				<td width="35%">Started on LPG explosion. Engulfing several high-rise buildings and residential areas.</td>
 				<td width="10%">11/07/2022</td>
-				<td>
-					<button class="btn btn-secondary">Generate Report</button>
+				<td width=15%>
+					<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 					<button class="btn btn-success"><i class="bi bi-pencil-fill"></i></button>
 					<button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
 				</td>
@@ -60,10 +60,10 @@
 			<tr>
 				<td width="20%">San Isidro Landslide</td>
 				<td width="10%">Landslide</td>
-				<td width="30%">Triggered by Heavy Rainfall. Buried a remote village under debris and mud from Mt. Balagbag </td>
+				<td width="35%">Triggered by Heavy Rainfall. Buried a remote village under debris and mud from Mt. Balagbag </td>
 				<td width="10%">06/26/2022</td>
-				<td>
-					<button class="btn btn-secondary">Generate Report</button>
+				<td width=15%>
+					<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 					<button class="btn btn-success"><i class="bi bi-pencil-fill"></i></button>
 					<button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
 				</td>
@@ -71,10 +71,10 @@
 			<tr>
 				<td width="20%">Earthquake Magnitude 5.7</td>
 				<td width="10%">Earthquake</td>
-				<td width="30%">Magnitude of 5.7 on District 2nd. Collapsing buildings and infrastructure</td>
+				<td width="35%">Magnitude of 5.7 on District 2nd. Collapsing buildings and infrastructure</td>
 				<td width="10%">03/15/2023</td>
-				<td>
-					<button class="btn btn-secondary">Generate Report</button>
+				<td width=15%>
+					<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 					<button class="btn btn-success"><i class="bi bi-pencil-fill"></i></button>
 					<button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
 				</td>
@@ -82,10 +82,10 @@
 			<tr>
 				<td width="20%">Typhoon Pedro</td>
 				<td width="10%">Typhoon</td>
-				<td width="30%">Heavy rainfall accompanied by strong winds.</td>
+				<td width="35%">Heavy rainfall accompanied by strong winds.</td>
 				<td width="10%">08/20/2023</td>
-				<td>
-					<button class="btn btn-secondary">Generate Report</button>
+				<td width=15%>
+					<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 					<button class="btn btn-success"><i class="bi bi-pencil-fill"></i></button>
 					<button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
 				</td>
