Added Index Page under UserManagement

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,10 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Disaster/Index">Disaster</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Evacuation/Index">Evacuation Centers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Users/Index">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="UserManagement/Index">User Management</a>
                         </li>
                     </ul>
                 </div>
