--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -2,3 +2,43 @@
 @model AgapayAidSystem.Pages.UserManagement.IndexModel
 @{
 }
+
+<h1 class="text-center display-4">User Management</h1>
+<div class="container">
+    <div class="row">
+        <div class="col"></div> <!-- This empty column pushes the button to the right -->
+        <div class="col-auto">
+            <a class="btn btn-primary btn-sm" href="/UserManagement/Create">New User</a>
+        </div>
+    </div>
+</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Username</th>
+            <th>Password</th>
+            <th>User Type</th>
+            <!-- th>User Photo</!-->
+            <th>Created At</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.listUsers)
+        {
+            <tr>
+                <td>@item.userID</td>
+                <td>@item.username</td>
+                <td>@item.password</td>
+                <td>@item.userType</td>
+                <!-- td>@item.userPhoto</!-->
+                <td>@item.createdAt</td>
+                <td>
+                    <a class="btn btn-primary btn-sm" href="/UserManagement/Edit?id=@item.userID">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/UserManagement/Delete?id=@item.userID">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
