--- a/wwwroot/css/bootswatch_Zephyr.css
+++ b/wwwroot/css/bootswatch_Zephyr.css
@@ -12,7 +12,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
 :root,
 [data-bs-theme=light] {
@@ -81,7 +81,7 @@
     --bs-dark-border-subtle: #adb5bd;
     --bs-white-rgb: 255, 255, 255;
     --bs-black-rgb: 0, 0, 0;
-    --bs-font-sans-serif: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --bs-font-sans-serif: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; /*CHANGED*/
     --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     --bs-body-font-family: var(--bs-font-sans-serif);
@@ -102,7 +102,7 @@
     --bs-tertiary-color-rgb: 73, 80, 87;
     --bs-tertiary-bg: #f8f9fa;
     --bs-tertiary-bg-rgb: 248, 249, 250;
-    --bs-heading-color: var(--bs-primary-color);
+    --bs-heading-color: #3F8F8B; /*CHANGED*/
     --bs-link-color: #3459e6;
     --bs-link-color-rgb: 52, 89, 230;
     --bs-link-decoration: underline;
@@ -175,7 +175,7 @@
     --bs-danger-border-subtle: #83191c;
     --bs-light-border-subtle: #495057;
     --bs-dark-border-subtle: #343a40;
-    --bs-heading-color: inherit;
+    --bs-heading-color: var(--bs-primary-color); /*CHANGED*/
     --bs-link-color: #859bf0;
     --bs-link-hover-color: #9daff3;
     --bs-link-color-rgb: 133, 155, 240;
@@ -227,7 +227,7 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     margin-top: 0;
     margin-bottom: 0.5rem;
-    font-weight: 500;
+    font-weight: 600; /*CHANGED*/
     line-height: 1.2;
     color: var(--bs-heading-color);
 }
@@ -13911,7 +13911,7 @@ thead th {
     }
 
 .alert .btn-close {
-    color: inherit;
+        color: inherit;    
 }
 
 .badge.bg-secondary, .badge.bg-light {
