--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -17,16 +17,31 @@
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">User Type</label>
 		<div class="col-sm-6">
-			<select class="form-select" name="userType" value="@Model.userInfo.userType">
+			<!-- select class="form-select" name="userType" value="@Model.userInfo.userType">
 				<option value="">Select user type</option>
 				<option value="Admin">Admin</option>
 				<option value="LGU Staff">LGU Staff</option>
 				<option value="EC Staff">EC Staff</option>
-			</select>
+			</!select -->
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
+					@if (Model.userInfo.userType == "Admin") { <text>checked</text> }>
+				<label class="form-check-label" for="adminRadio">Admin</label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
+					@if (Model.userInfo.userType == "LGU Staff") { <text>checked</text> }>
+				<label class="form-check-label" for="lguRadio">LGU Staff</label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
+				@if (Model.userInfo.userType == "EC Staff") { <text>checked</text> }>
+				<label class="form-check-label" for="ecRadio">EC Staff</label>
+			</div>
 		</div>
 	</div>
 
-	@if (Model.errorMessage.Length > 0)
+	@if (Model.successMessage.Length > 0)
 	{
 		<div class="row-mb-3">
 			<div class="col-sm-9">
