--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -19,12 +19,16 @@
 		</div>
 
 		<div class="col-6">
-			<div class="d-flex justify-content-end">
-				<div class="form-group mx-sm-3 mb-2">
-					<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-				</div>
+			<div id="search-bar-bttn">
+				<div class="d-flex justify-content-end">
+					<div class="form-group mx-sm-3 mb-2">
+						<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+					</div>
 
-				<button type="submit" class="btn btn-primary mb-2"><i class="bi bi-search"></i></button>
+					<button type="submit" class="btn btn-primary mb-2"><i class="bi bi-search"></i></button>
+				</div>
+			</div>
+			<div id="add-disaster-bttn">
 			</div>
 		</div>
 	</div>
