--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -11,27 +11,26 @@
 				<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;"><strong>Disaster</strong></li>
 			</ol>
 		</div>
+		<div class="input-group">
+			<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+			<button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
+		</div>
 	</div>
 
-	<div class="row pt-5">
-		<div class="col-6">
+
+	<div class="row pt-4">
+		<div class="col-md-6">
 			<h1>Disaster</h1>
 		</div>
 
-		<div class="col-6">
-			<div id="search-bar-bttn">
-				<div class="d-flex justify-content-end">
-					<div class="form-group mx-sm-3 mb-2">
-						<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-					</div>
-
-					<button type="submit" class="btn btn-primary mb-2"><i class="bi bi-search"></i></button>
-				</div>
-			</div>
-			<div id="add-disaster-bttn">
+		<div class="col-md-6">
+			<div class="d-flex justify-content-end align-items-center">
+				<a asp-page="create" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
 			</div>
 		</div>
 	</div>
+
+
 
 	<div class="table-responsive">
 		<table class="table align-middle table-hover " style="width:100%">
