Minor Fix for Disaster Page (#5)
* Modified the Add Disaster Button to col-auto.

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -5,6 +5,7 @@
 
 <div class="container p-2">
 	<div class="row pt-3">
+		<div class="col">
 		<div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a class="nav-link text-muted" asp-area="" asp-page="/Index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
@@ -19,11 +20,11 @@
 
 
 	<div class="row pt-4">
-		<div class="col-md-6">
+		<div class="col">
 			<h1>Disaster</h1>
 		</div>
 
-		<div class="col-md-6">
+		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
 				<a asp-page="create" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
 			</div>
