--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -26,12 +26,10 @@
 
 		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
-				<a asp-page="create" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
+				<a asp-page="/Disaster/_AddDisaster" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
 			</div>
 		</div>
 	</div>
-
-
 
 	<div class="table-responsive">
 		<table class="table align-middle table-hover " style="width:100%">
