--- a/wwwroot/css/bootswatch_Zephyr.css
+++ b/wwwroot/css/bootswatch_Zephyr.css
@@ -39,7 +39,7 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #3459e6;
+    --bs-primary: 3F8F8B; /*CHANGED*/
     --bs-secondary: #fff;
     --bs-success: #2fb380;
     --bs-info: #287bb5;
@@ -47,7 +47,7 @@
     --bs-danger: #da292e;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
-    --bs-primary-rgb: 52, 89, 230;
+    --bs-primary-rgb: 63, 143, 139; /*CHANGED*/
     --bs-secondary-rgb: 255, 255, 255;
     --bs-success-rgb: 47, 179, 128;
     --bs-info-rgb: 40, 123, 181;
@@ -3449,15 +3449,15 @@ textarea.form-control-lg {
 
 .btn-primary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #3459e6;
-    --bs-btn-border-color: #3459e6;
+    --bs-btn-bg: #3F8F8B;
+    --bs-btn-border-color: #3F8F8B;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #2c4cc4;
-    --bs-btn-hover-border-color: #2a47b8;
+    --bs-btn-hover-bg: #218054;
+    --bs-btn-hover-border-color: #218054;
     --bs-btn-focus-shadow-rgb: 82, 114, 234;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #2a47b8;
-    --bs-btn-active-border-color: #2743ad;
+    --bs-btn-active-color: #3F8F8B;
+    --bs-btn-active-bg: #3F8F8B;
+    --bs-btn-active-border-color: #3F8F8B;
     --bs-btn-active-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #3459e6;
@@ -3584,19 +3584,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    --bs-btn-color: #3459e6;
-    --bs-btn-border-color: #3459e6;
+    --bs-btn-color: #3F8F8B;
+    --bs-btn-border-color: #3F8F8B;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #3459e6;
-    --bs-btn-hover-border-color: #3459e6;
+    --bs-btn-hover-bg: #3F8F8B;
+    --bs-btn-hover-border-color: #3F8F8B;
     --bs-btn-focus-shadow-rgb: 52, 89, 230;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #3459e6;
-    --bs-btn-active-border-color: #3459e6;
+    --bs-btn-active-bg: #3F8F8B;
+    --bs-btn-active-border-color: #3F8F8B;
     --bs-btn-active-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    --bs-btn-disabled-color: #3459e6;
+    --bs-btn-disabled-color: #3F8F8B;
     --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #3459e6;
+    --bs-btn-disabled-border-color: #3F8F8B;
     --bs-gradient: none;
 }
 
@@ -13960,3 +13960,19 @@ thead th {
 .modal-content {
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
+
+/*CHANGED*/
+#disaster-form-container {
+    background-color: #F6F8FB;
+    padding: 20px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
+
+.button-spacer {
+    text-align: center;
+}
+
+  .button-spacer button {
+    margin: 0 10px; /* Add margin to create spacing between buttons */
+  }
