Modified the Go back to Disaster Page button.

--- a/Pages/Disaster/_AddDisaster.cshtml
+++ b/Pages/Disaster/_AddDisaster.cshtml
@@ -9,7 +9,7 @@
 
 		<div class="row pt-3">
 			<div class="input-group">
-				<a asp-page="/Disaster"><button type="submit" class="btn btn-outline-primary"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</button></a>
+				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
 			</div>
 		</div>
 
