Minor Fix to Disaster Page (#7)
* Modified the Go back to Disaster Page button.

* Added Edit Disaster Page. No functionality yet.

--- a/Pages/Disaster/_Edit Disaster.cshtml
+++ b/Pages/Disaster/_Edit Disaster.cshtml
@@ -9,13 +9,13 @@
 
 		<div class="row pt-3">
 			<div class="input-group">
-				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
+				<a asp-page="/Disaster" button type="submit" class="btn btn-outline-primary"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
 			</div>
 		</div>
 
 		<div class="row pt-4">
 			<div class="col text-center">
-				<h1>Add Disaster</h1>
+				<h1>Edit Disaster</h1>
 			</div>
 		</div>
 
@@ -32,7 +32,7 @@
 					<label class="form-label" for="InputDisasterType">Disaster Type:</label>
 					<div class="btn-group">
 						<button class="btn btn-secondary dropdown-toggle text-start text-muted" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-							Select Disaster Type
+							Fire
 						</button>
 
 						<!-- SAMPLE DATA -->
