--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<h1 class="text-center display-4">Create Admin</h1>
+<h1 class="text-center display-4">New Admin</h1>
 
 @if (!string.IsNullOrEmpty(Model.errorMessage))
 {
