--- a/Pages/UserManagement/CreateLGUStaff.cshtml
+++ b/Pages/UserManagement/CreateLGUStaff.cshtml
@@ -2,3 +2,97 @@
 @model AgapayAidSystem.Pages.UserManagement.CreateLGUStaffModel
 @{
 }
+
+<h1 class="text-center display-4">New EC Staff</h1>
+
+@if (!string.IsNullOrEmpty(Model.errorMessage))
+{
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@Model.errorMessage</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+<form method="POST">
+    <input type="hidden" name="userID" value="@Model.userID"/>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">User ID</label>
+        <div class="col-sm-6">
+            <span class="form-control-plaintext">@Model.userID</span>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">First Name *</label>
+        <div class="col-sm-6">
+            <input type="text" id="firstName" name="firstName" class="form-control" required />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Middle Name</label>
+        <div class="col-sm-6">
+            <input type="text" id="middleName" name="middleName" class="form-control" />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Last Name *</label>
+        <div class="col-sm-6">
+            <input type="text" id="lastName" name="lastName" class="form-control" required />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Extension Name</label>
+        <div class="col-sm-6">
+            <input type="text" id="extName" name="extName" class="form-control" />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Sex *</label>
+        <div class="col-sm-6">
+            <select id="sex" name="sex" class="form-select" required>
+                <option value="M">Male</option>
+                <option value="F">Female</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Birthdate *</label>
+    <div class="col-sm-6">
+        <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
+    </div>
+</div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Mobile Number *</label>
+        <div class="col-sm-6">
+            <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Email Address *</label>
+        <div class="col-sm-6">
+            <input type="email" id="emailAddress" name="emailAddress" class="form-control" required />
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <labeL>* Required fields.</label>
+    </div>
+
+    <div class="row mb-3">
+        <div class="offset-sm-3 col-sm-3 d-grid">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <div class="col-sm-3 d-grid">
+            <a class="btn btn-outline-primary" href="/UserManagement/CreateLGUStaff?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">Cancel</a>
+
+        </div>
+    </div>
+</form>
