--- a/Pages/Disaster/_AddDisaster.cshtml
+++ b/Pages/Disaster/_AddDisaster.cshtml
@@ -59,7 +59,7 @@
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
 					<button class="btn btn-outline-secondary mr-10">Cancel</button>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary">Save</button>
 				</div>
 			</form>
 		</div>
