--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -22,13 +22,17 @@
     </div>
 
     <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Admin Name</label>
+        <label class="col-sm-3 col-form-label">Admin Name *</label>
         <div class="col-sm-6">
-            <input type="text" id="adminName" name="adminName" class="form-control" required />
+            <input type="text" id="adminName" name="adminName" class="form-control" required maxlength="65" />
         </div>
     </div>
 
     <input type="hidden" name="userID" value="@Model.userID"/>
+
+    <div class="row mb-3">
+        <small class="text-muted">* Required field</small>
+    </div>
 
     @if (!string.IsNullOrEmpty(Model.successMessage))
     {
@@ -40,11 +44,30 @@
 
     <div class="row mb-3">
         <div class="offset-sm-3 col-sm-3 d-grid">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
         </div>
         <div class="col-sm-3 d-grid">
             <a class="btn btn-outline-primary" href="/UserManagement/CreateAdmin?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">Cancel</a>
-
         </div>
     </div>
 </form>
+
+<script>
+    const submitButton = document.getElementById('submitBtn');
+    const form = document.querySelector('form');
+
+    // Disable the submit button by default
+    submitButton.disabled = true;
+
+    // Function to check form validity and enable/disable the submit button
+    function checkFormValidity() {
+        if (form.checkValidity()) {
+            submitButton.disabled = false;
+        } else {
+            submitButton.disabled = true;
+        }
+    }
+
+    // Add an event listener for the input event on form elements
+    form.addEventListener('input', checkFormValidity);
+</script>
