Added titles of each page

--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.CreateModel
 @{
+	ViewData["Title"] = "New User";
 }
 
 <h1 class="text-center display-4">New User</h1>
