--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.IndexModel
 @{
+    ViewData["Title"] = "User Management";
 }
 
 <!-- h1 class="text-center display-4">User Management</!-->
