Updated the link for the List of Disaster Button.

--- a/Pages/Disaster/_AddDisaster.cshtml
+++ b/Pages/Disaster/_AddDisaster.cshtml
@@ -9,7 +9,7 @@
 
 		<div class="row pt-3">
 			<div class="input-group">
-				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
+				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
 			</div>
 		</div>
 
